--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="main-block__image _ibg">
-            <img src="img/mainblock/cover.jpg" alt="cover" />
+            <img src="./advantages/img/mainblock/cover.jpg" alt="cover" />
           </div>
         </div>
         <section class="page__services services">
@@ -64,7 +64,7 @@
                 <div class="services__item item-service">
                   <div class="item-service__icon">
                     <img
-                      src="img/services/01.svg"
+                      src="./services/01.svg"
                       alt="Environmental Consulting"
                     />
                   </div>
@@ -78,7 +78,7 @@
                 <div class="services__item item-service">
                   <div class="item-service__icon">
                     <img
-                      src="img/services/02.svg"
+                      src="./services/02.svg"
                       alt="Finance and consultancy"
                     />
                   </div>
@@ -92,7 +92,7 @@
                 <div class="services__item item-service item-service_green">
                   <div class="item-service__icon">
                     <img
-                      src="img/services/03.svg"
+                      src="./services/03.svg"
                       alt="Financial Services Consulting"
                     />
                   </div>
@@ -121,7 +121,7 @@
               <div class="advantages__column">
                 <div class="advantages__item">
                   <div class="advantages__icon">
-                    <img src="img/advantages/01.svg" alt="Consumer Products" />
+                    <img src="./advantages/01.svg" alt="Consumer Products" />
                   </div>
                   <div class="advantages__value">972 +</div>
                   <div class="advantages__text">Consumer Products</div>
@@ -130,7 +130,7 @@
               <div class="advantages__column">
                 <div class="advantages__item">
                   <div class="advantages__icon">
-                    <img src="img/advantages/02.svg" alt="Financial Services" />
+                    <img src="./advantages/02.svg" alt="Financial Services" />
                   </div>
                   <div class="advantages__value">181 +</div>
                   <div class="advantages__text">Financial Services</div>
@@ -139,7 +139,7 @@
               <div class="advantages__column">
                 <div class="advantages__item">
                   <div class="advantages__icon">
-                    <img src="img/advantages/03.svg" alt="Environmental" />
+                    <img src="./advantages/03.svg" alt="Environmental" />
                   </div>
                   <div class="advantages__value">98%</div>
                   <div class="advantages__text">Environmental</div>
@@ -148,7 +148,7 @@
               <div class="advantages__column">
                 <div class="advantages__item">
                   <div class="advantages__icon">
-                    <img src="img/advantages/04.svg" alt="Business & Finance" />
+                    <img src="./advantages/04.svg" alt="Business & Finance" />
                   </div>
                   <div class="advantages__value">746 +</div>
                   <div class="advantages__text">Business & Finance</div>
@@ -182,7 +182,7 @@
                   </div>
                   <a href="" class="item-practice__image _ibg">
                     <img
-                      src="img/practice/01.jpg"
+                      src="./practice/01.jpg"
                       alt="A single source of truth"
                     />
                   </a>
@@ -203,7 +203,7 @@
                   </div>
                   <a href="" class="item-practice__image _ibg">
                     <img
-                      src="img/practice/02.jpg"
+                      src="./practice/02.jpg"
                       alt="Fastest way to organize"
                     />
                   </a>
@@ -223,7 +223,7 @@
                   </div>
                   <a href="" class="item-practice__image _ibg">
                     <img
-                      src="img/practice/03.jpg"
+                      src="./practice/03.jpg"
                       alt="Fastest way to take action"
                     />
                   </a>
@@ -241,7 +241,7 @@
                     </div>
                   </div>
                   <a href="" class="item-practice__image _ibg">
-                    <img src="img/practice/04.jpg" alt="Work better together" />
+                    <img src="./practice/04.jpg" alt="Work better together" />
                   </a>
                 </article>
               </div>
@@ -281,7 +281,7 @@
                 <div class="whoweare__items">
                   <div class="whoweare__item item-whoweare">
                     <div class="item-whoweare__icon">
-                      <img src="img/whoweare/icons/01.svg" alt="icons>
+                      <img src="./01.svg" alt="icons" />
                     </div>
                     <div class="item-whoweare__body">
                       <div class="item-whoweare__title">
@@ -296,7 +296,7 @@
                   </div>
                   <div class="whoweare__item item-whoweare">
                     <div class="item-whoweare__icon">
-                      <img src="img/whoweare/icons/02.svg" alt="" />
+                      <img src="./02.svg" alt="" />
                     </div>
                     <div class="item-whoweare__body">
                       <div class="item-whoweare__title">
@@ -318,22 +318,22 @@
           <div class="clients__container _container">
             <div class="clients__items">
               <div class="clients__item">
-                <img src="img/clients/01.png" alt="clients" />
+                <img src="./clients/01.png" alt="clients" />
               </div>
               <div class="clients__item">
-                <img src="img/clients/02.png" alt="clients" />
+                <img src="./clients/02.png" alt="clients" />
               </div>
               <div class="clients__item">
-                <img src="img/clients/03.png" alt="clients" />
+                <img src="./clients/03.png" alt="clients" />
               </div>
               <div class="clients__item">
-                <img src="img/clients/04.png" alt="clients" />
+                <img src="./clients/04.png" alt="clients" />
               </div>
               <div class="clients__item">
-                <img src="img/clients/05.png" alt="clients" />
+                <img src="./clients/05.png" alt="clients" />
               </div>
               <div class="clients__item">
-                <img src="img/clients/06.png" alt="clients" />
+                <img src="./clients/06.png" alt="clients" />
               </div>
             </div>
           </div>
@@ -370,7 +370,7 @@
             <div class="getintouch__items">
               <div class="getintouch__item item-getintouch">
                 <div class="item-getintouch__icon">
-                  <img src="img/getintouch/01.svg" alt="getintouch" />
+                  <img src="./getintouch/01.svg" alt="getintouch" />
                 </div>
                 <div class="item-getintouch__emails">
                   <a
@@ -391,7 +391,7 @@
                 class="getintouch__item item-getintouch item-getintouch_active"
               >
                 <div class="item-getintouch__icon">
-                  <img src="img/getintouch/02.svg" alt="getintouch" />
+                  <img src="./getintouch/02.svg" alt="getintouch" />
                 </div>
                 <div class="item-getintouch__emails">
                   <a
@@ -410,7 +410,7 @@
               </div>
               <div class="getintouch__item item-getintouch">
                 <div class="item-getintouch__icon">
-                  <img src="img/getintouch/03.svg" alt="getintouch" />
+                  <img src="./getintouch/03.svg" alt="getintouch" />
                 </div>
                 <div class="item-getintouch__emails">
                   <a
