--- a/index.html
+++ b/index.html
@@ -555,17 +555,17 @@
               Made With Love By Figmaland All Right Reserved
             </div>
             <div class="footer__social social">
-              <a href="" class="social__item">
-                <img src="img/footer/social/01.svg" alt="social" />
+              <a href="#" class="social__item">
+                <img src="./footer/social/01.svg" alt="social" />
               </a>
-              <a href="" class="social__item">
-                <img src="img/footer/social/02.svg" alt="social" />
+              <a href="#" class="social__item">
+                <img src="./footer/social/02.svg" alt="social" />
               </a>
-              <a href="" class="social__item">
-                <img src="img/footer/social/03.svg" alt="social" />
+              <a href="#" class="social__item">
+                <img src="./footer/social/03.svg" alt="social" />
               </a>
-              <a href="" class="social__item">
-                <img src="img/footer/social/04.svg" alt="social" />
+              <a href="#" class="social__item">
+                <img src="./footer/social/04.svg" alt="social" />
               </a>
             </div>
           </div>
